MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
ab_base.png \
ab_shell.png \
bg_bevel.png \
bg_shine.png \
bg_glint.png \
bg_led.png \
bg_led_base.png \
bg_led_glow.png \
bg_led_strobe.png \
bg_shadow.png \
cr_fill.png \
cr_key.png \
cr_out.png \
cr_pulse.png \
fn_shadow.png \
media_bg.png \
media_line.png \
media_pause.png \
media_play.png \
media_stop.png \
media_knob_pos.png \
media_knob_vol.png \
pm_fill.png \
pm_overlay.png \
pm_shadow.png \
lk_bottom.png \
lk_left.png \
lk_right.png
