MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
ab_base.png \
ab_shell.png \
bg_bevel.png \
bg_shine.png \
bg_glint.png \
bg_glow_in.png \
bg_led.png \
bg_led_base.png \
bg_led_glow.png \
bg_led_strobe.png \
bg_shadow.png \
bg_shadow2.png \
bg_shadow3.png \
cr_glow.png \
cr_key.png \
cr_out.png \
cr_pulse.png \
fn_shadow.png \
icon_about.png \
icon_close.png \
icon_copy.png \
icon_new.png \
icon_paste.png \
icon_settings.png \
icon_split_h.png \
icon_split_v.png \
inset_shadow.png \
media_bg.png \
media_line.png \
media_pause.png \
media_play.png \
media_stop.png \
media_knob_pos.png \
media_knob_vol.png \
media_busy_knob.png \
media_busy_progress.png \
media_busy_spinner.png \
pm_fill.png \
pm_overlay.png \
pm_shadow.png \
lk_bottom.png \
lk_left.png \
lk_right.png \
sl_htop.png \
sl_hbottom.png \
sl_left.png \
sl_top.png \
sl_bottom.png \
sl_stripe.png \
sl_right.png

