MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
ab_base.png \
ab_shell.png \
bg_bevel.png \
bg_shine.png \
bg_shine2.png \
bg_shine3.png \
bg_shine4.png \
bg_shine5.png \
bg_glint.png \
bg_glow_in.png \
bg_led.png \
bg_led_base.png \
bg_led_glow.png \
bg_led_strobe.png \
bg_shadow.png \
bg_shadow2.png \
bg_shadow3.png \
cr_glow.png \
cr_key.png \
cr_out.png \
cr_pulse.png \
fn_shadow.png \
icon_about.png \
icon_close.png \
icon_copy.png \
icon_new.png \
icon_paste.png \
icon_settings.png \
icon_split_h.png \
icon_split_v.png \
icon_miniview.png \
inset_shadow.png \
media_bg.png \
media_line.png \
media_pause.png \
media_play.png \
media_stop.png \
media_knob_pos.png \
media_knob_vol.png \
media_busy_knob.png \
media_busy_progress.png \
media_busy_spinner.png \
pm_fill.png \
pm_overlay.png \
pm_shadow.png \
lk_bottom.png \
lk_left.png \
lk_right.png \
sl_htop.png \
sl_hbottom.png \
sl_left.png \
sl_top.png \
sl_bottom.png \
sl_stripe.png \
sl_right.png \
tab_base_bottom.png \
tab_base_l0.png \
tab_base_l1.png \
tab_base_m.png \
tab_base_r0.png \
tab_base_r1.png \
tab_bg_l0.png \
tab_bg_l1.png \
tab_bg_r0.png \
tab_bg_r1.png \
tab_close.png \
tab_other_l.png \
tab_other_m.png \
tab_other_r.png \
tab_shad_l0.png \
tab_shad_l1.png \
tab_shad_l2.png \
tab_shad_r0.png \
tab_shad_r1.png \
tab_shad_r2.png
